--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,9 +30,9 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3 site-description">
+      <!--<div class="footer-col footer-col-3 site-description">
         <p>{{ site.description }}</p>
-      </div>
+      </div>-->
     </div>
 
   </div>
