--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,10 @@
 <div class="wrapper">
   <center> <a href="/index.html"><div class="site-title">   {{site.title}} </div></a></center>
 </div>
+<!--
 <div class="wrapper site-description">
 <center>  {{site.description}} </center>
-</div>
+</div>-->
 <div class="wrapper">
   <div class="trigger site-navigation">
     <a class="page-link" href="{{site.url}}{{site.baseurl}}">HOME</a>
