--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading small-site-title">Blog</h2>
+    <h2 class="footer-heading small-site-title">2018</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
